<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_note">

  <fragment
    android:id="@+id/nav_note"
    android:name="com.waffiq.bazz_list.listnotes.NotesFragment"
    android:label="@string/notes"
    tools:layout="@layout/fragment_notes" />

  <fragment
    android:id="@+id/nav_task"
    android:name="com.waffiq.bazz_list.tasks.TasksFragment"
    android:label="@string/task"
    tools:layout="@layout/fragment_tasks" />

  <fragment
    android:id="@+id/nav_slideshow"
    android:name="com.waffiq.bazz_list.slideshow.SlideshowFragment"
    android:label="@string/menu_slideshow"
    tools:layout="@layout/fragment_slideshow" />
</navigation>